--- a/index.html
+++ b/index.html
@@ -14,21 +14,13 @@
       <h1 class="project-name">Model 100 Archive</h1>
       <h2 class="project-tagline">Open Source Archive of TRS-80 Model 100 Software</h2>
     </section>
-
     <section class="main-content">
       <p>The Model 100 Archive is an open source archive of BASIC software for the TRS-80 Model 100.</p>
-
 <p>Contact us at <a href="mailto:archive@model100.in">archive@model100.in</a></p>
-      
 <p>Have software you'd like to submit to the archive? Submit a pull request to this repository or email us (<a href="mailto:archive@model100.in">archive@model100.in</a>)</p>
-
       <footer class="site-footer">
-
-        <span class="site-footer-credits">This software is open source and may be used freely.</span>
+        <span class="site-footer-credits">This software is open source and in the public domain, and may be used freely.</span>
       </footer>
-
     </section>
-
-  
   </body>
 </html>
