--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <p>Contact us at <a href="mailto:archive@model100.in">archive@model100.in</a></p>
 <p>Have software you'd like to submit to the archive? Submit a pull request to this repository or email us (<a href="mailto:archive@model100.in">archive@model100.in</a>)</p>
       <footer class="site-footer">
-        <span class="site-footer-credits">This software is open source and in the public domain, and may be used freely.</span>
+        <span class="site-footer-credits">All the software in the Model 100 Archive is in the public domain, and is therefore free for commercial use.</span>
       </footer>
     </section>
   </body>
