--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     <section class="page-header">
       <h1 class="project-name">Model 100 Archive</h1>
       <h2 class="project-tagline">Open Source Archive of TRS-80 Model 100 Software</h2>
+      <a href="https://github.com/archive100/model100archive" class="btn">View on GitHub</a>
     </section>
     <section class="main-content">
-      <p>The Model 100 Archive is an open source archive of BASIC software for the TRS-80 Model 100.</p>
+      <p>The Model 100 Archive is an open source (public domain) archive of BASIC software for the TRS-80 Model 100.</p>
 <p>Contact us at <a href="mailto:archive@model100.in">archive@model100.in</a></p>
 <p>Have software you'd like to submit to the archive? Submit a pull request to this repository or email us (<a href="mailto:archive@model100.in">archive@model100.in</a>)</p>
       <footer class="site-footer">
