--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+    <script src="https://use.fontawesome.com/15266c295b.js"></script>
   </head>
   <body>
     <section class="page-header">
@@ -23,5 +24,9 @@
         <span class="site-footer-credits">All the software in the Model 100 Archive is in the public domain, and is therefore free for commercial use.</span>
       </footer>
     </section>
+    <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+    <script>
+      
+    </script>
   </body>
 </html>
