Fix spacing and color errors

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <h2 class="project-tagline">Public Domain Archive of TRS-80 Model 100 Software</h2>
       <a href="https://github.com/archive100/model100archive" class="btn"><i class="fa fa-github fa-lg"></i> View on GitHub</a>
       <a href="https://github.com/archive100/model100archive/pulls" class="btn"><i class="fa fa-plus fa-lg"></i> Add Your Software</a>
+      <a href="mailto:archive@model100.in" target="_blank" class="btn"><i class="fa fa-envelope-open-o fa-lg"></i> Contact Us</a>
     </section>
     <section class="main-content">
       <p class="items">
