--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <p>The Model 100 Archive is an open source (public domain) archive of BASIC software for the TRS-80 Model 100.</p>
         <p>Contact us at <a href="mailto:archive@model100.in">archive@model100.in</a></p>
         <p>Want to contribute to the archive? Submit a <a href="https://github.com/archive100/model100archive/pulls">pull request</a> to this repository or email us (<a href="mailto:archive@model100.in">archive@model100.in</a>)</p>
-        All the software in the Model 100 Archive is in the public domain, and free for commercial use.</p>
+        <p>All the software in the Model 100 Archive is in the public domain, and free for commercial use.</p>
       </footer>
     </section>
     <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
