--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
         color: #111111;
         font-family: monospace;
         font-size: 30px;
-        text-align: center;
         display: flex;
         justify-content: center;
         align-items: center;
+      }
+      div {
+        width: 50vw;
+        min-width: 400px;
       }
     </style>
   </head>
